--- a/ColorNumber/Views/Storyboard/Base.lproj/Main.storyboard
+++ b/ColorNumber/Views/Storyboard/Base.lproj/Main.storyboard
@@ -19,7 +19,7 @@
                     <view key="view" contentMode="scaleToFill" id="5jn-gt-BhV">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="0.36080265890000002" blue="0.29425046510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.91755962369999999" green="0.91771018510000002" blue="0.91752761599999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="Z27-lm-cxb"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Import" image="ic_importdark" id="Pfh-lX-76G"/>
@@ -37,7 +37,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="T8Q-rr-D5z" userLabel="NavigationView">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="60.5"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="60.5"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_libary" translatesAutoresizingMaskIntoConstraints="NO" id="j5s-FY-IZZ">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="60"/>
@@ -66,10 +66,10 @@
                                 </constraints>
                             </view>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.91755962371826172" green="0.91771018505096436" blue="0.91752761602401733" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="T8Q-rr-D5z" firstAttribute="leading" secondItem="56N-Vj-L3H" secondAttribute="leading" id="W7a-I0-C94"/>
-                            <constraint firstItem="T8Q-rr-D5z" firstAttribute="top" secondItem="HRt-oR-tzi" secondAttribute="top" id="WlU-0P-rop"/>
+                            <constraint firstItem="T8Q-rr-D5z" firstAttribute="top" secondItem="HRt-oR-tzi" secondAttribute="top" constant="20" id="WlU-0P-rop"/>
                             <constraint firstItem="T8Q-rr-D5z" firstAttribute="height" secondItem="HRt-oR-tzi" secondAttribute="height" multiplier="1/11" id="bcF-aK-upW"/>
                             <constraint firstItem="56N-Vj-L3H" firstAttribute="trailing" secondItem="T8Q-rr-D5z" secondAttribute="trailing" id="tAC-g7-BR8"/>
                         </constraints>
@@ -109,7 +109,7 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="0.91755962369999999" green="0.91771018510000002" blue="0.91752761599999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="My gallary" image="ic_mygallarydark" id="gDh-hj-tdB"/>
