--- a/ColorNumber/Views/Storyboard/Base.lproj/Main.storyboard
+++ b/ColorNumber/Views/Storyboard/Base.lproj/Main.storyboard
@@ -15,7 +15,7 @@
         <!--Import-->
         <scene sceneID="JkH-k1-aor">
             <objects>
-                <viewController id="udh-68-Wzk" customClass="MyWorksViewController" customModule="ColorNumber" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="udh-68-Wzk" customClass="ImportViewController" customModule="ColorNumber" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5jn-gt-BhV">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -105,7 +105,7 @@
         <!--My gallary-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="MoreViewController" customModule="ColorNumber" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="MyGallaryViewController" customModule="ColorNumber" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
