--- a/ColorNumber/Views/Storyboard/Base.lproj/Main.storyboard
+++ b/ColorNumber/Views/Storyboard/Base.lproj/Main.storyboard
@@ -83,7 +83,64 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JlC-Js-tsJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-103.2" y="-406.14692653673166"/>
+            <point key="canvasLocation" x="-242" y="-400"/>
+        </scene>
+        <!--Root View Controller-->
+        <scene sceneID="qSt-oU-ae4">
+            <objects>
+                <viewController storyboardIdentifier="RootViewController" id="NFf-q5-osV" customClass="RootViewController" customModule="ColorNumber" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="XXR-bN-thj">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <viewLayoutGuide key="safeArea" id="55k-7g-xzm"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bio-Gl-Pxm" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="668" y="-397"/>
+        </scene>
+        <!--Watch Video View Controller-->
+        <scene sceneID="Y6f-AU-Bb7">
+            <objects>
+                <viewController storyboardIdentifier="WatchVideoViewController" id="fLo-0g-PRq" customClass="WatchVideoViewController" customModule="ColorNumber" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="vZs-4k-mbN">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e8H-ls-esU">
+                                <rect key="frame" x="0.0" y="20" width="375" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="0p7-8d-kfb"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UZ3-rN-qQj">
+                                <rect key="frame" x="20" y="60" width="335" height="607"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="0.79462400629999996" blue="0.25328960319999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="Hbh-Yg-bnX" firstAttribute="trailing" secondItem="e8H-ls-esU" secondAttribute="trailing" id="3HR-Gn-K6O"/>
+                            <constraint firstItem="Hbh-Yg-bnX" firstAttribute="trailing" secondItem="UZ3-rN-qQj" secondAttribute="trailing" constant="20" id="7m4-rW-QXb"/>
+                            <constraint firstItem="e8H-ls-esU" firstAttribute="top" secondItem="Hbh-Yg-bnX" secondAttribute="top" id="Cga-Md-ILa"/>
+                            <constraint firstItem="Hbh-Yg-bnX" firstAttribute="bottom" secondItem="UZ3-rN-qQj" secondAttribute="bottom" id="DUf-sn-GvY"/>
+                            <constraint firstItem="UZ3-rN-qQj" firstAttribute="top" secondItem="e8H-ls-esU" secondAttribute="bottom" id="ea8-td-GKH"/>
+                            <constraint firstItem="e8H-ls-esU" firstAttribute="leading" secondItem="Hbh-Yg-bnX" secondAttribute="leading" id="qBo-l4-nRq"/>
+                            <constraint firstItem="UZ3-rN-qQj" firstAttribute="leading" secondItem="Hbh-Yg-bnX" secondAttribute="leading" constant="20" id="wbV-Ei-Gho"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Hbh-Yg-bnX"/>
+                    </view>
+                    <connections>
+                        <outlet property="dataLabel" destination="e8H-ls-esU" id="akF-Pi-8ot"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ZwL-OS-eZ0" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1340" y="-392"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="WuR-ip-eCO">
@@ -120,7 +177,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-313" y="1066"/>
+            <point key="canvasLocation" x="-242" y="1074"/>
         </scene>
     </scenes>
     <resources>
