--- a/ColorNumber/Views/Storyboard/Base.lproj/Main.storyboard
+++ b/ColorNumber/Views/Storyboard/Base.lproj/Main.storyboard
@@ -42,6 +42,94 @@
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_libary" translatesAutoresizingMaskIntoConstraints="NO" id="j5s-FY-IZZ">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="60"/>
                                     </imageView>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wRz-Kn-aht" customClass="DesignableView" customModule="ColorNumber" customModuleProvider="target">
+                                        <rect key="frame" x="2" y="2" width="149.5" height="56.5"/>
+                                        <subviews>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_trending" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vO0-kP-Exz">
+                                                <rect key="frame" x="22.5" y="2" width="30" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" secondItem="vO0-kP-Exz" secondAttribute="height" id="UO9-eQ-9lm"/>
+                                                </constraints>
+                                            </imageView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name app" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zza-zv-d9v">
+                                                <rect key="frame" x="52.5" y="0.0" width="95" height="34"/>
+                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                <nil key="highlightedColor"/>
+                                                <variation key="widthClass=compact">
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
+                                                </variation>
+                                            </label>
+                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="2fD-pI-di1">
+                                                <rect key="frame" x="10" y="34" width="129.5" height="17.5"/>
+                                                <subviews>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oSf-mD-tfc" customClass="DesignableButton" customModule="ColorNumber" customModuleProvider="target">
+                                                        <rect key="frame" x="0.0" y="0.0" width="62.5" height="17.5"/>
+                                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                                        <state key="normal" title="Review">
+                                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        </state>
+                                                        <userDefinedRuntimeAttributes>
+                                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                                <real key="value" value="5"/>
+                                                            </userDefinedRuntimeAttribute>
+                                                        </userDefinedRuntimeAttributes>
+                                                        <variation key="widthClass=compact">
+                                                            <fontDescription key="fontDescription" type="system" pointSize="9"/>
+                                                        </variation>
+                                                        <connections>
+                                                            <action selector="review:" destination="wyU-vL-a4B" eventType="touchUpInside" id="ZIb-3W-xhj"/>
+                                                        </connections>
+                                                    </button>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DCn-cw-cXL" customClass="DesignableButton" customModule="ColorNumber" customModuleProvider="target">
+                                                        <rect key="frame" x="67.5" y="0.0" width="62" height="17.5"/>
+                                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                                        <state key="normal" title="Feedback">
+                                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                                        </state>
+                                                        <userDefinedRuntimeAttributes>
+                                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                                <real key="value" value="5"/>
+                                                            </userDefinedRuntimeAttribute>
+                                                        </userDefinedRuntimeAttributes>
+                                                        <variation key="widthClass=compact">
+                                                            <fontDescription key="fontDescription" type="system" pointSize="9"/>
+                                                        </variation>
+                                                        <connections>
+                                                            <action selector="feedback:" destination="wyU-vL-a4B" eventType="touchUpInside" id="Uow-ii-be2"/>
+                                                        </connections>
+                                                    </button>
+                                                </subviews>
+                                            </stackView>
+                                        </subviews>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstItem="2fD-pI-di1" firstAttribute="top" secondItem="vO0-kP-Exz" secondAttribute="bottom" constant="2" id="0Wp-aK-Lbw"/>
+                                            <constraint firstAttribute="bottom" secondItem="2fD-pI-di1" secondAttribute="bottom" constant="5" id="3le-MN-Pn1"/>
+                                            <constraint firstAttribute="trailing" secondItem="2fD-pI-di1" secondAttribute="trailing" constant="10" id="Hcs-YV-heV"/>
+                                            <constraint firstAttribute="trailing" secondItem="Zza-zv-d9v" secondAttribute="trailing" constant="2" id="NvA-8J-HRK"/>
+                                            <constraint firstItem="Zza-zv-d9v" firstAttribute="top" secondItem="wRz-Kn-aht" secondAttribute="top" id="RsY-cS-KvS"/>
+                                            <constraint firstItem="2fD-pI-di1" firstAttribute="leading" secondItem="wRz-Kn-aht" secondAttribute="leading" constant="10" id="S0O-Xf-Jv0"/>
+                                            <constraint firstItem="vO0-kP-Exz" firstAttribute="centerX" secondItem="wRz-Kn-aht" secondAttribute="centerX" multiplier="1/2" id="Vy3-m5-bzu"/>
+                                            <constraint firstItem="vO0-kP-Exz" firstAttribute="top" secondItem="wRz-Kn-aht" secondAttribute="top" constant="2" id="ZMY-ea-h8y"/>
+                                            <constraint firstItem="Zza-zv-d9v" firstAttribute="leading" secondItem="vO0-kP-Exz" secondAttribute="trailing" id="nk2-Sg-xfJ"/>
+                                            <constraint firstItem="Zza-zv-d9v" firstAttribute="height" secondItem="wRz-Kn-aht" secondAttribute="height" multiplier="3/5" id="u0Q-ex-GwN"/>
+                                            <constraint firstItem="2fD-pI-di1" firstAttribute="top" secondItem="Zza-zv-d9v" secondAttribute="bottom" id="xuB-mv-8M2"/>
+                                        </constraints>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                                <real key="value" value="2"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                                <color key="value" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                <real key="value" value="5"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                    </view>
                                     <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bt_addthree" translatesAutoresizingMaskIntoConstraints="NO" id="b9g-Nx-FTN">
                                         <rect key="frame" x="161.5" y="11" width="52.5" height="39"/>
                                         <constraints>
@@ -54,14 +142,18 @@
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
+                                    <constraint firstItem="b9g-Nx-FTN" firstAttribute="leading" secondItem="wRz-Kn-aht" secondAttribute="trailing" constant="10" id="2Y3-Lv-sOk"/>
                                     <constraint firstAttribute="bottom" secondItem="j5s-FY-IZZ" secondAttribute="bottom" id="CYj-Pi-OSS"/>
+                                    <constraint firstItem="wRz-Kn-aht" firstAttribute="top" secondItem="T8Q-rr-D5z" secondAttribute="top" constant="2" id="LbQ-93-udm"/>
                                     <constraint firstAttribute="trailing" secondItem="l5R-qz-Dw5" secondAttribute="trailing" constant="5" id="Nsh-pT-KJg"/>
                                     <constraint firstItem="b9g-Nx-FTN" firstAttribute="centerY" secondItem="T8Q-rr-D5z" secondAttribute="centerY" id="Odq-RO-a3B"/>
                                     <constraint firstItem="l5R-qz-Dw5" firstAttribute="centerY" secondItem="T8Q-rr-D5z" secondAttribute="centerY" id="PtT-gT-45B"/>
                                     <constraint firstItem="l5R-qz-Dw5" firstAttribute="leading" secondItem="b9g-Nx-FTN" secondAttribute="trailing" constant="5" id="Vd8-8h-Ubs"/>
+                                    <constraint firstItem="wRz-Kn-aht" firstAttribute="leading" secondItem="T8Q-rr-D5z" secondAttribute="leading" constant="2" id="XjU-Cv-4sw"/>
                                     <constraint firstItem="j5s-FY-IZZ" firstAttribute="leading" secondItem="T8Q-rr-D5z" secondAttribute="leading" id="cTA-nD-HN3"/>
                                     <constraint firstItem="j5s-FY-IZZ" firstAttribute="top" secondItem="T8Q-rr-D5z" secondAttribute="top" id="ij1-IN-Lgy"/>
                                     <constraint firstAttribute="trailing" secondItem="j5s-FY-IZZ" secondAttribute="trailing" id="n58-4C-RXO"/>
+                                    <constraint firstAttribute="bottom" secondItem="wRz-Kn-aht" secondAttribute="bottom" constant="2" id="rJy-Ah-Kek"/>
                                     <constraint firstItem="b9g-Nx-FTN" firstAttribute="centerX" secondItem="T8Q-rr-D5z" secondAttribute="centerX" id="zE6-ZW-ZDc"/>
                                 </constraints>
                             </view>
@@ -83,7 +175,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JlC-Js-tsJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-242" y="-400"/>
+            <point key="canvasLocation" x="-242.40000000000001" y="-400.74962518740631"/>
         </scene>
         <!--Watch Video View Controller-->
         <scene sceneID="Y6f-AU-Bb7">
@@ -206,5 +298,6 @@
         <image name="ic_libary" width="414" height="48"/>
         <image name="ic_libarydark" width="27" height="27"/>
         <image name="ic_mygallarydark" width="27" height="27"/>
+        <image name="ic_trending" width="27" height="27"/>
     </resources>
 </document>
